# vep-core

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  install_deps.sh  rebuild-all.sh  run_aws_ingestion.sh  run_canplayer.sh  run_framework.sh  run_kuksa_logger.sh  validate_mappings.sh
bridges/common/: rt_transport.cpp  rt_transport.hpp
bridges/exporter_common/: CMakeLists.txt
bridges/exporter_common/include/: batch_builder.hpp  compressor.hpp  exporter_pipeline.hpp  mqtt_sink.hpp  subscriber.hpp  transport_sink.hpp  unified_pipeline.hpp  wire_decoder.hpp  wire_encoder.hpp
bridges/exporter_common/src/: batch_builder.cpp  compressor.cpp  exporter_pipeline.cpp  mqtt_sink.cpp  subscriber.cpp  unified_pipeline.cpp  wire_decoder.cpp  wire_encoder.cpp
bridges/exporter_common/tests/: batch_builder_test.cpp  compressor_test.cpp  wire_codec_test.cpp
bridges/kuksa_dds_bridge/: kuksa_dds_bridge.cpp  kuksa_dds_bridge.hpp  main.cpp  vss_config.cpp  vss_config.hpp
bridges/rt_dds_bridge/: main.cpp  rt_dds_bridge.cpp  rt_dds_bridge.hpp
bridges/vep_can_actuator/: CMakeLists.txt  README.md  can_encoder.cpp  can_encoder.hpp  can_writer.cpp  can_writer.hpp  main.cpp  vss_dbc_parser.cpp  vss_dbc_parser.hpp
bridges/vep_can_actuator/tests/: test_can_encoder.cpp  test_vss_dbc.json  test_vss_dbc_parser.cpp
bridges/vep_can_actuator/tools/: actuator_test_publisher.cpp  kuksa_actuator_sender.cpp
bridges/vep_exporter/: main.cpp
bridges/vep_exporter/src/: compressed_mqtt_sink.hpp  dds_proto_conversion.cpp
bridges/vep_exporter_ifex/: CMakeLists.txt
bridges/vep_exporter_ifex/include/: ifex_backend_transport.hpp
bridges/vep_exporter_ifex/src/: ifex_backend_transport.cpp  main.cpp
config/: README.md  model3_mappings_dag.yaml  run_can_replay.sh  run_transformer.sh  vss_types.vspec
examples/apps/vdr_exporter/: main.cpp
libs/backend_transport/: CMakeLists.txt
libs/backend_transport/include/vep/: backend_transport.hpp  mqtt_backend_transport.hpp
libs/backend_transport/src/: mqtt_backend_transport.cpp
libs/backend_transport/tests/: mqtt_test_fixture.hpp  transport_test.cpp
probes/: CMakeLists.txt
probes/avtp/: CMakeLists.txt  main.cpp
probes/avtp/idl/: avtp_telemetry.idl
probes/otel/: CMakeLists.txt  main.cpp
probes/otel/idl/: otel_telemetry.idl
probes/vep_avtp_probe/: CMakeLists.txt  main.cpp
probes/vep_can_probe/: CMakeLists.txt  main.cpp
probes/vep_otel_probe/: CMakeLists.txt  main.cpp
probes/vss_can/: CMakeLists.txt  main.cpp
probes/vss_can/idl/: telemetry.idl  vss_telemetry.idl
proto/: transfer.proto
src/bridge/: kuksa_dds_bridge.cpp  kuksa_dds_bridge.hpp  main.cpp
src/exporter/: compressed_mqtt_sink.cpp  compressed_mqtt_sink.hpp  dds_proto_conversion.cpp  dds_proto_conversion.hpp  output_sink.hpp  subscriber.cpp  subscriber.hpp
src/probes/vdr_can_simulator/: can_simulator_main.cpp  vehicle_model.cpp  vehicle_model.hpp
src/rt_bridge/: main.cpp  rt_dds_bridge.cpp  rt_dds_bridge.hpp
tests/integration/: test_kuksa_dds_bridge_reconnect.cpp
tools/cloud_backend/: main.cpp
tools/cloud_test_client/: CMakeLists.txt  main.cpp
tools/vep_host_metrics/: CMakeLists.txt  main.cpp
tools/vep_host_metrics/src/: otlp_metrics_client.cpp  otlp_metrics_client.hpp  proc_reader.cpp  proc_reader.hpp
tools/vep_mqtt_logger/: main.cpp
tools/vep_mqtt_receiver/: main.cpp
vep-exporter/src/: compressed_mqtt_sink.cpp  compressed_mqtt_sink.hpp  dds_proto_conversion.hpp  output_sink.hpp  subscriber.cpp
